[tool.poetry]
name = "analysis-tweet-with-ja-timex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ja-timex = "^0.1.6"
twint = {git = "https://github.com/twintproject/twint.git", rev = "master"}
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
taskipy = "^1.8.1"
dependency-injector = "^4.36.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^21.7b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
fmt = { cmd = "black kokutwi", help = "format code" }
lint = { cmd = "task lint_black && task lint_flake8 && task lint_mypy", help = "exec lint" }
lint_flake8 = "flake8 --max-line-length=119 kokutwi"
lint_mypy = "mypy kokutwi"
lint_black = "black --check kokutwi"
start = { cmd = "uvicorn kokutwi.application:app --reload", help = "launch api server" }
